Fixed spacing issues, user page now extends home feed

--- a/clippy/gather/static/css/styles.css
+++ b/clippy/gather/static/css/styles.css
@@ -57,7 +57,8 @@
 
 #group-list {
 	position: sticky;
-	top: 4.5rem;
+	top: 5rem;
+	padding-bottom: 1.5rem;
 }
 
 #group-list .list-group-item.active,
@@ -147,4 +148,8 @@
 	border-radius: .25rem;
 	object-fit: cover;
 	cursor: pointer;
+}
+
+.card-title:last-child {
+	margin-bottom: 0;
 }
